refactor test lists